examples/k8stest/conf/EdgionTls/https/Gateway.yaml
# EdgionTls HTTPS 测试套件 Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edgiontls-https-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    # HTTPS 监听器 - 由 EdgionTls 配置 TLS
    - name: https
      protocol: HTTPS
      port: 31190
